--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,4 @@ description: > # your text below (remove <br> elements if you don't need line br
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-google_analytics: <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DNY4XTB0MR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DNY4XTB0MR');
-</script># your Google Analytics tracking ID here
+google_analytics: G-DNY4XTB0MR # your Google Analytics tracking ID here
