--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: John Jewell # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description will be here
-  <br><br>
-  Second description will be there
+  Bonjour et bienvenue! 
   <br><br>
   <a href="https://www.linkedin.com/in/john-jewell-73b1601b9/">View My LinkedIn Profile</a> 
   
