--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: John Jewell # your name (or website title) here
-logo: "/images/photo cv v3.JPG?raw=true" # your photo (or logo) here
+logo: "/images/photo cv v3.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Bonjour et bienvenue! 
   <br><br>
