--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/photo cv v3.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Bonjour et bienvenue sur mon portfolio! 
   <br><br>
-  Bio: Étudiant en Master Marketing & Data Analytics à l’Université de Montpellier. Passionné par l’analyse de données, la stratégie marketing et les solutions data-driven. Toujours curieux d'apprendre et d’explorer de nouveaux outils data.
+  Étudiant en Master Marketing & Data Analytics à l’Université de Montpellier. Passionné par l’analyse de données, la stratégie marketing et les solutions data-driven. Toujours curieux d'apprendre et d’explorer de nouveaux outils data.
   <br><br>
   <br><br>
   <a href="https://www.linkedin.com/in/john-jewell-73b1601b9/">View My LinkedIn Profile</a>
