--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <br><br>
   
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: minimal-mistakes-jekyll
 plugins:
 - jekyll-remote-theme
 google_analytics: G-DNY4XTB0MR # your Google Analytics tracking ID here
